--- a/src/components/layout/sidebar/Sidebar.module.scss
+++ b/src/components/layout/sidebar/Sidebar.module.scss
@@ -1,4 +1,4 @@
 .sidebar {
-	@apply flex items-center flex-col justify-between border-r py-layout;
+	@apply flex items-center flex-col justify-between;
 
 }
