--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,26 +1,16 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color: #efeff3;
+  --background: #0f0104;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
+html, body {
+  height: 100vh;
+  color: var(--color);
   background: var(--background);
-  color: var(--foreground);
+  background: linear-gradient(
+    to top right,
+    #0f0104, #0f0a14), #0f0104;
   font-family: Arial, Helvetica, sans-serif;
 }
