upd(Sidebar): added using py-layout

--- a/src/components/layout/sidebar/Sidebar.module.scss
+++ b/src/components/layout/sidebar/Sidebar.module.scss
@@ -1,5 +1,5 @@
 .sidebar {
-	@apply flex items-center flex-col justify-between border-r border-border py-5;
+	@apply flex items-center flex-col justify-between border-r border-border py-layout;
 	
 
 	a {
